# Inquisitor

./: .gitignore  README.md  default.nix  flake.nix  module.nix  pyproject.toml  setup.py  shell.nix
inquisitor/: __init__.py  __main__.py  app.py  cli.py  configs.py  core.py  dungeon.py  error.py  importer.py  item.py  loader.py  sources.py  templates.py  timestamp.py
inquisitor/configs/: __init__.py  resolver.py
inquisitor/resources/: feed.css
inquisitor/templates/: feed.html  feed.jinja2
sources/: callbackdemo.py  deletetriggerexdemo.py  dummy.py  example.py  importdemo.py  importdemohelper.py  triggerdemo.py  ttddemogen.py  ttddemoupd.py  ttldemogen.py  ttldemoupd.py  ttsdemo.py
