[tool.poetry]
name = "inquisitor"
version = "0.2.0"
description = "An arbitrary feed aggregator"
authors = ["Tim Van Baak <tim.vanbaak+inquisitor@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Jaculabilis/Inquisitor"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
praw = {version = "^7.6.1", optional = true}
gunicorn = {version = "^20.1.0", optional = true}
feedparser = {version = "^6.0.10", optional = true}

[tool.poetry.extras]
dev = ["praw", "gunicorn", "feedparser"]

[tool.poetry.scripts]
inquisitor = "inquisitor.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
